--- a/.nuget/packages.config
+++ b/.nuget/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.VisualStudio.Composition" version="15.0.30-pre" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.ProjectSystem" version="14.1.127-pre" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.ProjectSystem" version="15.0.582-pre-g76aab6d79c" targetFramework="net45" />
+  <package id="Microsoft.VisualStudio.Setup.Configuration.Interop" version="1.1.142-preview4-29265" targetFramework="net35" />
   <package id="Microsoft.VisualStudio.Shell.Interop.15.0.DesignTime" version="15.0.0" targetFramework="net45" />
   <package id="Microsoft.VSSDK.BuildTools" version="14.3.25420" targetFramework="net45" />
   <package id="Microsoft.VSSDK.BuildTools" version="15.0.25728-Preview5" targetFramework="net46" />
