--- a/src/NuGet.Core/NuGet.ProjectManagement/NuGet.ProjectManagement.csproj
+++ b/src/NuGet.Core/NuGet.ProjectManagement/NuGet.ProjectManagement.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.IO.Compression" />
   </ItemGroup>
 
 </Project>
