--- a/src/NuGet.Core/NuGet.Protocol.Core.v3/NuGet.Protocol.Core.v3.csproj
+++ b/src/NuGet.Core/NuGet.Protocol.Core.v3/NuGet.Protocol.Core.v3.csproj
@@ -6,7 +6,7 @@
     <VersionPrefix>4.0.0</VersionPrefix>
     <Authors>NuGet</Authors>
     <TargetFrameworks>net45;netstandard1.3</TargetFrameworks>
-    <NoWarn>$(NoWarn);CS1591;CS1573</NoWarn>
+    <NoWarn>$(NoWarn);CS1591;CS1573;CS0012</NoWarn>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>NuGet.Protocol.Core.v3</AssemblyName>
@@ -39,6 +39,7 @@
     <Reference Include="System.ServiceModel" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.IO.Compression" />
   </ItemGroup>
 
   <PropertyGroup Condition=" '$(TargetFramework)' == 'net45' ">
