--- a/src/NuGet.Core/NuGet.Protocol.Test.Utility/NuGet.Protocol.Test.Utility.csproj
+++ b/src/NuGet.Core/NuGet.Protocol.Test.Utility/NuGet.Protocol.Test.Utility.csproj
@@ -29,6 +29,8 @@
   <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net" />
   </ItemGroup>
 
   <PropertyGroup Condition=" '$(TargetFramework)' == 'net46' ">
@@ -38,5 +40,9 @@
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' ">
     <DefineConstants>$(DefineConstants);IS_CORECLR</DefineConstants>
   </PropertyGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' ">
+
+  </ItemGroup>
 
 </Project>
