--- a/src/NuGet.Core/Test.Utility/Test.Utility.csproj
+++ b/src/NuGet.Core/Test.Utility/Test.Utility.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
 
 </Project>
