--- a/src/NuGet.Credentials/NuGet.Credentials.csproj
+++ b/src/NuGet.Credentials/NuGet.Credentials.csproj
@@ -60,6 +60,11 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\NuGet.PackageManagement\NuGet.PackageManagement.csproj">
+    <Name>NuGet.PackageManagement</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
     <None Include="project.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
