--- a/src/NuGet.Build.Tasks/NuGet.Build.Tasks.csproj
+++ b/src/NuGet.Build.Tasks/NuGet.Build.Tasks.csproj
@@ -1,4 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Description>NuGet 3 restore for dotnet CLI</Description>
