--- a/src/NuGet.VisualStudio.Implementation/NuGet.VisualStudio.Implementation.csproj
+++ b/src/NuGet.VisualStudio.Implementation/NuGet.VisualStudio.Implementation.csproj
@@ -107,6 +107,9 @@
       <Project>{50e33da2-af14-486d-81b8-bd8409744a38}</Project>
       <Name>NuGet.Console</Name>
     </ProjectReference>
+    <ProjectReference Include="..\NuGet.Resolver\NuGet.Resolver.csproj">
+        <Name>NuGet.Resolver</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="CommonResources.resx">
