--- a/src/NuGet.VisualStudio.Implementation/project.json
+++ b/src/NuGet.VisualStudio.Implementation/project.json
@@ -6,8 +6,7 @@
     "Microsoft.VisualStudio.Shell.Interop.12.0": "12.0.30110",
     "Microsoft.VisualStudio.Shell.Interop.8.0": "8.0.50727",
     "Microsoft.VisualStudio.Shell.Interop.9.0": "9.0.30729",
-    "Microsoft.VisualStudio.OLE.Interop": "7.10.6070",
-    "NuGet.Resolver": "4.0.0-*"
+    "Microsoft.VisualStudio.OLE.Interop": "7.10.6070"
   },
   "frameworks": {
     "net46": {}
