--- a/src/NuGet.VisualStudio/NuGet.VisualStudio.csproj
+++ b/src/NuGet.VisualStudio/NuGet.VisualStudio.csproj
@@ -101,6 +101,9 @@
       <Project>{eea49a74-6efc-410e-9745-bad367ac151d}</Project>
       <Name>NuGet.VisualStudio.Facade</Name>
     </ProjectReference>
+    <ProjectReference Include="..\NuGet.NuGet.Protocol.VisualStudio\NuGet.NuGet.Protocol.VisualStudio.csproj">
+        <Name>NuGet.NuGet.Protocol.VisualStudio</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(EnlistmentRoot)\build\common.targets" />
