--- a/src/VsConsole/Console.Types/NuGet.Console.Types.csproj
+++ b/src/VsConsole/Console.Types/NuGet.Console.Types.csproj
@@ -54,6 +54,11 @@
   <ItemGroup>
     <None Include="project.json" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NuGet.PackageManagement\NuGet.PackageManagement.csproj">
+      <Name>NuGet.PackageManagement</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(EnlistmentRoot)\build\common.targets" />
   <Import Project="$(EnlistmentRoot)\build\sign.targets" />
