--- a/src/VsConsole/PowerShellHost/NuGetConsole.Host.PowerShell.csproj
+++ b/src/VsConsole/PowerShellHost/NuGetConsole.Host.PowerShell.csproj
@@ -113,6 +113,9 @@
       <Project>{6FD11460-39A3-4A10-BA63-7541B0A7D053}</Project>
       <Name>NuGet.Console.Types</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\NuGet.Resolver\NuGet.Resolver.csproj">
+      <Name>NuGet.Resolver</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="Scripts\about_NuGet.PackageManagement.PowerShellCmdlets.help.txt" />
