--- a/src/VisualStudio.Interop/NuGet.VisualStudio.Interop.csproj
+++ b/src/VisualStudio.Interop/NuGet.VisualStudio.Interop.csproj
@@ -70,5 +70,5 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\..\..\build\sign.targets" />
+  <Import Project="..\..\build\sign.targets" />
 </Project>
