--- a/src/VsConsole/Console.Types/NuGet.Console.Types.csproj
+++ b/src/VsConsole/Console.Types/NuGet.Console.Types.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\..\..\..\Build\Common.props" Condition="Exists('..\..\..\..\Build\Common.props')" />
+  <Import Project="..\..\..\Build\Common.props" Condition="Exists('..\..\..\Build\Common.props')" />
   <PropertyGroup>
     <ProjectGuid>{6FD11460-39A3-4A10-BA63-7541B0A7D053}</ProjectGuid>
     <OutputType>Library</OutputType>
