--- a/src/VsConsole/Console/NuGet.Console.csproj
+++ b/src/VsConsole/Console/NuGet.Console.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\..\..\..\Build\Common.props" />
+  <Import Project="..\..\..\Build\Common.props" />
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <RootNamespace>NuGetConsole</RootNamespace>
